# ticket_puzzle

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: models.py
app/management/commands/: ticket.py
app/migrations/: 0001_initial.py  0002_alter_ticket_options.py
config/: settings.py
