[tool.poetry]
name = "ticket-puzzle"
version = "0.1.0"
description = ""
authors = ["trananhkma <trananhkma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"
psycopg2 = "^2.9.6"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
